[package]
name = "sgx-decode-pib"
version = "0.1.1"
authors = ["Yu Ding <dingelish@gmail.com>"]
build = "build.rs"
repository = "https://github.com/dingelish/sgx-decode-pib-rs"
license-file = "LICENSE"
description = "A simple tool to decode SGX IAS returned Platform Info Blob string"
homepage = "https://github.com/dingelish/sgx-decode-pib-rs"

include = [
    "build.rs",
    "Cargo.toml",
    "Readme.md",
    "src/main.rs",
    "LICENSE",
]

[dependencies]
hex       = "0.3"
itertools = "0.7.8"
